public room dashboard started

--- a/clientside/src/component/publicDashboard/dashboard.css
+++ b/clientside/src/component/publicDashboard/dashboard.css
@@ -63,6 +63,10 @@
   padding:20px;
     width:96.5%;
     background-color:rgb(241,241,241);
+    display: flex;
+    flex-wrap: wrap;
+    overflow: auto;
+    justify-content: space-between;
 }
 
 .nav-container>img{ 
