chat appliation to dashboard

--- a/clientside/src/component/publicRoomDashboard/Publicdashboard.css
+++ b/clientside/src/component/publicRoomDashboard/Publicdashboard.css
@@ -89,13 +89,15 @@
 }
 .Members{ 
     height: 82.5vh;
-    width: 33%;
-
+    width: 30%;
     padding: 0px 10px;
     background-color: white;
     border-radius:10px;
     position:fixed;
-    margin-left: 850px;
+    margin-left: 56%;
+    margin-right: 15px;
+    background-color: #fff;
+    z-index: 100;
 
 }
 .midContaintBox2{
@@ -107,6 +109,7 @@
 }
 .disscussiobBox{
     width:100%;
+    /* overflow-x: hidden; */
     height:fit-content;
     background-color: white;
     border-radius:10px;
