--- a/clientside/src/component/Public room/publiccard.css
+++ b/clientside/src/component/Public room/publiccard.css
@@ -1,7 +1,7 @@
 .card{
     height:300px;
-    width:300px;
-    background-color:red;
+    width:500px;
+    background-color:white;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -9,17 +9,22 @@
     align-items: center;
     text-align: center;
     padding: 2%;
-    margin-bottom: 10px;
+    margin-bottom: 50px;
 }
 .profile{
     height:100px;
     width:100px;
     border-radius: 50px;
-    background-color:white;
+    background-color:rgb(92,186,71);
+    text-align: center;
+    color:white;
+}
+.profile>h1{
+margin-top: 25px;
 }
 .btn{
-    width:200px;
-    height:25px;
+    width:300px;
+    height:30px;
     border-radius: 10px;
     background-color:#26397B;
     color: white;
