--- a/clientside/src/component/publicRoomDashboard/Publicdashboard.css
+++ b/clientside/src/component/publicRoomDashboard/Publicdashboard.css
@@ -66,7 +66,7 @@
     display: flex;
     flex-wrap: wrap;
     overflow: auto;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .nav-container>img{ 
