--- a/clientside/src/component/Public room/publiccard.css
+++ b/clientside/src/component/Public room/publiccard.css
@@ -1,6 +1,6 @@
 .card{
-    height:300px;
-    width:500px;
+    height:350px;
+    width:300px;
     background-color:white;
     border-radius: 10px;
     display: flex;
@@ -31,6 +31,7 @@ margin-top: 25px;
    
 
 }
-title{
-    height:100px;
+.title{
+    height:150px;
+ 
 }
