--- a/clientside/src/component/publicRoomDashboard/Publicdashboard.css
+++ b/clientside/src/component/publicRoomDashboard/Publicdashboard.css
@@ -1,117 +1,152 @@
-.dashboardBody{
-    height: 100vh;
-    width: 100%;
-    /* background-color:#00152A; */
-}
-.logo{margin-top:10px;
- height:55px;
- width:55px;
- text-align:center;
- margin-left: auto;
- margin-right: auto;
-
-}
-
-.container{ 
-    display:flex;
-    flex-direction: row;
-    justify-content: center;
-    
-}
-.profiles{ 
-
-    display:flex;
-    flex-direction: column;
-    width:10%;
-    height: 100vh;
-    background-color:#00152A;
-    
-}
-.profiles-container{
- height:80px;
- width:100%;
- margin-top: 15px;
- display: flex;
- flex-direction: column;
- justify-content: center;
- align-items: center;
- color:white;
-
-
-}
-.profiles-container:hover{
-  background-color:#26397B;
-   
-   
-   }
- .profiles-container>img{
-    height:30px;
-    width:30px;
-  
-   
-   }
-.right-container{ 
-    height: 100vh;
-    width:100%;
-
-    display: flex;
-    flex-direction: column;
-
-}
-.Select-container{ 
+.dashboardBody {
   height: 100vh;
-  padding:20px;
-    width:96.5%;
-    background-color:rgb(241,241,241);
-    display: flex;
-    flex-wrap: wrap;
-    overflow: auto;
-    justify-content: space-around;
+  width: 100%;
+  /* background-color:#00152A; */
 }
 
-.nav-container>img{ 
-    height: 60px;
-   margin-left:30px;
-   margin-top: 5px;
-
-
+.logo {
+  margin-top: 10px;
+  height: 55px;
+  width: 55px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
-.midContaintBox{
-    text-align: left;
-    height: 82.5vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.profiles {
+  display: flex;
+  flex-direction: column;
+  width: 10%;
+  height: 100vh;
+  background-color: #00152a;
+}
+
+.profiles-container {
+  height: 80px;
+  width: 100%;
+  margin-top: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+.profiles-container:hover {
+  background-color: #26397b;
+}
+
+.profiles-container > img {
+  height: 30px;
+  width: 30px;
+}
+
+.right-container {
+  height: 100vh;
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.Select-container {
+  height: 100vh;
+  padding: 20px;
+  width: 96.5%;
+  background-color: rgb(241, 241, 241);
+  display: flex;
+  flex-wrap: wrap;
+  overflow: auto;
+  justify-content: space-around;
+}
+
+.nav-container > img {
+  height: 60px;
+  margin-left: 30px;
+  margin-top: 5px;
+ 
+}
+.nav-container  {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    
-}
-.Members{ 
-    height: 82.5vh;
-    width: 30%;
-    padding: 0px 10px;
-    background-color: white;
-    border-radius:10px;
-    position:fixed;
-    margin-left: 56%;
-    margin-right: 15px;
-    background-color: #fff;
-    z-index: 100;
-
-}
-.midContaintBox2{
-    height: 82.5vh;
-    width: 60%;
-    padding: 0px 15px;
+    justify-content:space-between;
    
+  }
+
+
+.midContaintBox {
+  text-align: left;
+  height: 82.5vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.Members {
+  height: 82.5vh;
+  width: 30%;
+  padding: 0px 10px;
+  background-color: white;
+  border-radius: 10px;
+  position: fixed;
+  margin-left: 56%;
+  margin-right: 15px;
+  background-color: #fff;
+  z-index: 100;
+}
+
+.midContaintBox2 {
+  height: 82.5vh;
+  width: 60%;
+  padding: 0px 15px;
+}
+
+.disscussiobBox {
+  width: 100%;
+  /* overflow-x: hidden; */
+  height: fit-content;
+  background-color: white;
+  border-radius: 10px;
+}
+.remove{
+    width: 300px;
+    display: flex;
+    justify-content:space-between;
+    margin: 12px 0px;
+    margin-right: 20px;
+}
+.leave{
+  background-color:rgb(94,186,68);
+  height: 35px;
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  border-radius:20px;
+  width: 135px;
+  color:white;
+  cursor: pointer;
+  
+
 
 }
-.disscussiobBox{
-    width:100%;
-    /* overflow-x: hidden; */
-    height:fit-content;
-    background-color: white;
-    border-radius:10px;
+.exit{
+    background-color:#26397b;
+    height: 35px;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    border-radius:20px;
+    width: 130px;
+    color:white;
+    cursor: pointer;
 
 }
