--- a/clientside/src/component/publicRoomDashboard/Publicdashboard.css
+++ b/clientside/src/component/publicRoomDashboard/Publicdashboard.css
@@ -103,6 +103,20 @@
   background-color: #fff;
   z-index: 100;
 }
+.newone {
+    width: 50px;
+    height: 50px;
+    margin-top: 6px;
+    background-color: #fff;
+    color: #25397B;
+    margin-left: 30%;
+    margin-top: 18%;
+    border-radius: 50%;
+    align-items: center;
+    text-align: center;
+    font-size: 32px;
+    cursor:pointer; 
+}
 
 .midContaintBox2 {
   height: 82.5vh;
