--- a/clientside/src/component/publicDashboard/dashboard.css
+++ b/clientside/src/component/publicDashboard/dashboard.css
@@ -12,6 +12,22 @@
 
 }
 
+.newone {
+    width: 50px;
+    height: 50px;
+    margin-top: 6px;
+    background-color: #fff;
+    color: #25397B;
+    margin-left: 30%;
+    margin-top: 18%;
+    border-radius: 50%;
+    align-items: center;
+    text-align: center;
+    font-size: 32px;
+    cursor:pointer; 
+}
+
+
 .container{ 
     display:flex;
     flex-direction: row;
@@ -89,6 +105,20 @@
     width: 111px;
     margin-right:30px;
 
+    color:white;
+    cursor: pointer;
+}
+
+.create{
+    background-color:#26397b;
+    height: 35px;
+    justify-content:center;
+    align-items: center;
+    border-radius:20px;
+    width: 150px;
+    margin-left:750px;
+    outline: none;
+    border: none;
     color:white;
     cursor: pointer;
 }
