--- a/clientside/src/component/publicDashboard/dashboard.css
+++ b/clientside/src/component/publicDashboard/dashboard.css
@@ -86,13 +86,25 @@
 }
 .nav-container{
     display: flex;
-    /* justify-content: space-between; */
+    justify-content: space-around;
     align-items: center;
 }
 .nav-container>img{ 
     height: 60px;
    margin-left:30px;
    margin-top: 5px;
+}
+.searchbtn {
+    position: fixed;
+    height: 42px;
+    margin: auto 0px;
+    padding: 0px 5px;
+    margin-left: 30%;
+    background-color: white;
+    border: 1px solid lightgray;
+    cursor: pointer;
+    border-radius: 10px;
+    color:#25397B
 }
 
 .logout{
@@ -102,11 +114,25 @@
     justify-content:center;
     align-items: center;
     border-radius:20px;
-    width: 111px;
+    width: 80px;
     margin-right:30px;
 
     color:white;
     cursor: pointer;
+}
+.searchbox{
+    position: fixed;
+    width: 350px;
+    background-color: yellow;
+        height: 30px;
+        margin: auto 0px;
+        padding: 5px;
+        font-size:15px;
+        font-weight:600;
+        background-color: white;
+        border: none;
+        outline: none;
+        margin-left: 150px;
 }
 
 .create{
