--- a/clientside/src/component/publicRoomDashboard/Publicdashboard.css
+++ b/clientside/src/component/publicRoomDashboard/Publicdashboard.css
@@ -28,7 +28,7 @@
 }
 
 .profiles-container {
-  height: 80px;
+  height: 95px;
   width: 100%;
   margin-top: 15px;
   display: flex;
@@ -36,6 +36,7 @@
   justify-content: center;
   align-items: center;
   color: white;
+  cursor: pointer;
 }
 
 .profiles-container:hover {
